makko/games/minecraft/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: boofcraft
  labels:
    app: boofcraft
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: boofcraft
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: boofcraft
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-yha-nr5
      containers:
      - image: itzg/minecraft-server:java8
        name: minecraft
        volumeMounts:
        - name: data
          mountPath: /data
        - name: data2
          mountPath: /data2
        ports:
        - containerPort: 25565
        resources:
          limits:
            cpu: "2"
            memory: 16Gi
            ephemeral-storage: 64Mi
          requests:
            cpu: 100m
            memory: 8Gi
            ephemeral-storage: 64Mi
      volumes:
      - name: data2
        persistentVolumeClaim:
          claimName: minecraft-boofcraft
          readOnly: false
      - name: data
        hostPath:
          path: /var/mnt/boofcraft
          type: DirectoryOrCreate
