makko/games/minecraft/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boofcraft
spec:
  selector:
    app: boofcraft
  ports:
  - protocol: TCP
    port: 25565
    targetPort: 25565
    nodePort: 31222
  type: NodePort
