makko/games/minecraft/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: boofcraft
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https
  hostnames:
    - "boofcraft.senk0.com"
  rules:
    - backendRefs:
        - name: boofcraft
          port: 25565
